2007-06-12  Piotr Eljasiak  <epiotr@use.pl>

	* data/gnome-commander.spec.in:
	Minor tweaking with library versioning

2007-06-12  Damien Carbery  <damien.carbery@sun.com>

	* configure.in:
	* libgcmd/gnome-cmd-file-info.c:
	* libgcmd/Makefile.am:
	* plugins/cvs/Makefile.am:
	* plugins/fileroller/Makefile.am:
	* plugins/test/Makefile.am:
	* plugins/test/test-plugin.c:
	* src/dict.h:
	* src/filter.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-types.h:
	* src/Makefile.am:
	* src/utils.cc:
	* src/libgviewer/Makefile.am:
	* src/libgviewer/viewer-widget.c::
	* src/tags/id3lib/Makefile.am:
	* src/tags/Makefile.am:
	* tests/gviewer/datapresentation.c:
	* tests/gviewer/imagerenderer.c:
	* tests/gviewer/Makefile.am:
	* tests/gviewer/textrenderer.c:
	* tests/gviewer/viewerwidget.c:
	Fixed build errors for Solaris

2007-06-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.c:
	Added 'Metadata' tab to file-props dlg

2007-06-09  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.5



##############################################################################
#                                   1.2.4                                    #
##############################################################################

2007-06-08  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	* src/gnome-cmd-mkdir-dialog.cc:
	Make parent directories as needed ('mkdir -p' like)

2007-06-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Added "file.delete" action

	* src/gnome-cmd-user-actions.cc:
	Added shortcut CTRL+SHIFT+C as 'Copy selected file names to clipboard'

2007-06-05  Dirk Göttel <dgoettel@freenet.de>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems

2007-05-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	Added stringify() functions

2007-05-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc: